@@ -67,7 +67,7 @@ static help_text_t const HELP_TEXT_COMMANDS[] = {
   { "  define <name> as <english>", SAME_AS_C },
   { "  explain <gibberish>", SAME_AS_C },
   { "  { help | ? } [command[s] | english]", SAME_AS_C },
-  { "  set [options]", SAME_AS_C },
+  { "  set [<option> | options]", SAME_AS_C },
   { "  show { <name> | all | predefined | user } [typedef]", SAME_AS_C },
   { "  typedef <gibberish>", SAME_AS_C },
   { NOT_IN_LANG,
@@ -77,6 +77,8 @@ static help_text_t const HELP_TEXT_COMMANDS[] = {
   { "  exit | quit | q", SAME_AS_C },
   { "gibberish: a C declaration, like \"int x\"; or cast, like \"(int)x\"",
     "gibberish: a C++ declaration, like \"int x\"; or cast, like \"(int)x\"" },
+  { "option: [no]debug {di|tri|no}graphs <lang> [no]prompt [no]semicolon",
+    SAME_AS_C },
   { NOT_IN_LANG,
     "scope-c: class struct union [inline] namespace" },
   { NOT_IN_LANG,
