@@ -57,9 +57,9 @@ extern c_graph_t    opt_graph;          ///< Di/Trigraph mode.
 extern bool         opt_interactive;    ///< Interactive mode?
 extern c_lang_id_t  opt_lang;           ///< Current language.
 extern bool         opt_no_conf;        ///< Do not read configuration file.
+extern bool         opt_prompt;         ///< Don't print the prompt.
 extern bool         opt_semicolon;      ///< Print `;` at end of gibberish.
 extern bool         opt_typedefs;       ///< Load C/C++ standard `typedef`s.
-extern bool         opt_quiet;          ///< Don't print the prompt.
 
 // other extern variables
 extern FILE        *fin;                ///< File in.
