@@ -4,11 +4,12 @@ command:
   define <name> as <english>
   explain <gibberish>
   { help | ? } [command[s] | english]
-  set [options]
+  set [<option> | options]
   show { <name> | all | predefined | user } [typedef]
   typedef <gibberish>
   exit | quit | q
 gibberish: a C declaration, like "int x"; or cast, like "(int)x"
+option: [no]debug {di|tri|no}graphs <lang> [no]prompt [no]semicolon
 
 where:
   [] = 0 or 1; * = 0 or more; {} = one of; | = alternate; <> = defined elsewhere
