@@ -12,6 +12,14 @@ with their complete changes, see the AUTHORS file.
 
 * Changes in Cdecl 6.4.3
 
+** Changed -q to -p
+The --quiet and -q options (that were in the original cdecl) were changed to
+--no-prompt and -p so they're more explicit about what they do.
+
+** Set command changed
+The "set" command now only prints the current options.  Its help has beed added
+to the "help" command.
+
 ** Better K&R C protptypes error
 The error message given when attempting to use function prototypes in K&R C has
 been improved.
